--- a/index.html
+++ b/index.html
@@ -21,6 +21,16 @@
     border-radius:14px; padding:26px; box-shadow:0 12px 40px rgba(2,8,23,0.6);
     border:1px solid rgba(255,255,255,0.03); backdrop-filter: blur(6px);
   }
+  /* Header copyright */
+  .topline{
+    text-align:center;
+    font-weight:700;
+    color:rgba(230,238,248,0.9);
+    margin-bottom:12px;
+    font-size:0.98rem;
+    letter-spacing:0.3px;
+  }
+
   header{display:flex;align-items:center;gap:14px;margin-bottom:12px}
   .logo{width:60px;height:60px;border-radius:12px;background:linear-gradient(135deg,var(--accent), #7b61ff);display:flex;align-items:center;justify-content:center;font-weight:700;color:#031026;transform:rotate(-6deg)}
   h1{margin:0;font-size:1.4rem}
@@ -47,19 +57,12 @@
   #submit-btn:disabled{opacity:0.5;cursor:not-allowed}
   #result{margin-top:16px;padding:12px;border-radius:10px;background:linear-gradient(180deg, rgba(0,0,0,0.1), rgba(255,255,255,0.01));border:1px solid rgba(255,255,255,0.02)}
   .small{font-size:0.92rem;color:rgba(230,238,248,0.85)}
-  .footer{
-    text-align:center;
-    margin-bottom:16px;
-    font-size:0.95rem;
-    color:rgba(230,238,248,0.8);
-    letter-spacing:0.4px;
-  }
   @media (max-width:720px){header{flex-direction:column;align-items:flex-start}}
 </style>
 </head>
 <body>
   <div class="wrap">
-    <div class="footer">© Mateo — Creador | Profe Martha</div>
+    <div class="topline">© Mateo — Creador | Profe Martha</div>
 
     <header>
       <div class="logo">PC</div>
@@ -72,11 +75,233 @@
     <form id="quizForm">
       <p class="note">Selecciona una opción por pregunta. Cada pregunta se bloqueará al seleccionar.</p>
 
-      <!-- Preguntas -->
-      <!-- (todo el bloque de preguntas igual que antes) -->
-      <!-- ... -->
-      <!-- No modifiqué tus preguntas, siguen idénticas -->
-      <!-- Pegas aquí tus preguntas del 1 al 25 (idénticas a tu versión anterior) -->
+      <!-- Preguntas 1..25 -->
+      <div class="question" id="q1-box">
+        <h3>1. ¿Cómo contribuir efectivamente a que el lugar de trabajo sea seguro para las personas?</h3>
+        <div class="answers">
+          <label><input type="radio" name="q1" value="a"> Organizar el lugar de trabajo, no consumir alimentos o bebidas</label>
+          <label><input type="radio" name="q1" value="b"> Mantener el equipo en un lugar limpio y seco</label>
+          <label><input type="radio" name="q1" value="c"> Evitar moverse dentro de la sala</label>
+          <label><input type="radio" name="q1" value="d"> Todas las anteriores</label>
+          <label><input type="radio" name="q1" value="e"> Ninguna de las anteriores</label>
+        </div>
+      </div>
+
+      <div class="question" id="q2-box">
+        <h3>2. ¿Qué requiere la computadora para mantenerse en buen estado?</h3>
+        <div class="answers">
+          <label><input type="radio" name="q2" value="a"> Tener a la mano productos de limpieza como límpido</label>
+          <label><input type="radio" name="q2" value="b"> Tener el escritorio lleno de íconos</label>
+          <label><input type="radio" name="q2" value="c"> Un encendido, uso adecuado y apagado correcto</label>
+        </div>
+      </div>
+
+      <div class="question" id="q3-box">
+        <h3>3. ¿Qué medidas se emplean para resguardar la información?</h3>
+        <div class="answers">
+          <label><input type="radio" name="q3" value="a"> Usar protección contra variaciones de corriente</label>
+          <label><input type="radio" name="q3" value="b"> Mantener el antivirus actualizado</label>
+          <label><input type="radio" name="q3" value="c"> Aceptar todos los regalos en línea</label>
+          <label><input type="radio" name="q3" value="d"> Todas las anteriores</label>
+        </div>
+      </div>
+
+      <div class="question" id="q4-box">
+        <h3>4. ¿Por qué es importante seguir recomendaciones para cuidar los equipos?</h3>
+        <div class="answers">
+          <label><input type="radio" name="q4" value="a"> Para que se dañen más rápido</label>
+          <label><input type="radio" name="q4" value="b"> Detectar rápidamente sobrevoltajes</label>
+          <label><input type="radio" name="q4" value="c"> Cuidar la vida útil y aprovecharlos más tiempo</label>
+        </div>
+      </div>
+
+      <div class="question" id="q5-box">
+        <h3>5. ¿En dónde se deben usar los computadores para mantenerlos seguros?</h3>
+        <div class="answers">
+          <label><input type="radio" name="q5" value="a"> Dejarlo en cualquier parte</label>
+          <label><input type="radio" name="q5" value="b"> En oficinas, alejándolos del polvo y corrientes de aire</label>
+          <label><input type="radio" name="q5" value="c"> Al aire libre</label>
+        </div>
+      </div>
+
+      <div class="question" id="q6-box">
+        <h3>6. ¿Qué recomendaciones hay para el buen uso de Internet?</h3>
+        <div class="answers">
+          <label><input type="radio" name="q6" value="a"> No descargar programas desconocidos</label>
+          <label><input type="radio" name="q6" value="b"> No aceptar regalos en línea</label>
+          <label><input type="radio" name="q6" value="c"> Todas las anteriores</label>
+        </div>
+      </div>
+
+      <div class="question" id="q7-box">
+        <h3>7. ¿Cuáles son los dos tipos de mantenimiento para la computadora?</h3>
+        <div class="answers">
+          <label><input type="radio" name="q7" value="a"> Facebook y WhatsApp</label>
+          <label><input type="radio" name="q7" value="b"> Hardware y Software</label>
+        </div>
+      </div>
+
+      <div class="question" id="q8-box">
+        <h3>8. ¿Cómo se apaga correctamente una computadora?</h3>
+        <div class="answers">
+          <label><input type="radio" name="q8" value="a"> Apagar con el interruptor directamente (nunca hacerlo)</label>
+          <label><input type="radio" name="q8" value="b"> Apagar desde Windows y esperar que cierre</label>
+          <label><input type="radio" name="q8" value="c"> Solo pararse y dejarla encendida</label>
+        </div>
+      </div>
+
+      <div class="question" id="q9-box">
+        <h3>9. ¿Qué es lo primero que debes hacer antes de limpiar un computador?</h3>
+        <div class="answers">
+          <label><input type="radio" name="q9" value="a"> Limpiarlo mientras está encendido</label>
+          <label><input type="radio" name="q9" value="b"> Apagarlo y desconectarlo de la corriente</label>
+          <label><input type="radio" name="q9" value="c"> Mojar la pantalla</label>
+        </div>
+      </div>
+
+      <div class="question" id="q10-box">
+        <h3>10. ¿Qué elemento NO se debe usar para limpiar una computadora?</h3>
+        <div class="answers">
+          <label><input type="radio" name="q10" value="a"> Paño de microfibra</label>
+          <label><input type="radio" name="q10" value="b"> Alcohol isopropílico</label>
+          <label><input type="radio" name="q10" value="c"> Agua directamente sobre el teclado</label>
+        </div>
+      </div>
+
+      <div class="question" id="q11-box">
+        <h3>11. ¿Por qué es importante tener un antivirus actualizado?</h3>
+        <div class="answers">
+          <label><input type="radio" name="q11" value="a"> Para proteger contra virus y programas maliciosos</label>
+          <label><input type="radio" name="q11" value="b"> Para que el PC funcione más lento</label>
+          <label><input type="radio" name="q11" value="c"> No es importante</label>
+        </div>
+      </div>
+
+      <div class="question" id="q12-box">
+        <h3>12. ¿Qué se debe evitar al usar una laptop?</h3>
+        <div class="answers">
+          <label><input type="radio" name="q12" value="a"> Usarla sobre una cama o almohada</label>
+          <label><input type="radio" name="q12" value="b"> Colocarla en superficie plana y ventilada</label>
+          <label><input type="radio" name="q12" value="c"> Conectarla a un regulador</label>
+        </div>
+      </div>
+
+      <div class="question" id="q13-box">
+        <h3>13. ¿Qué sucede si no actualizamos el sistema operativo?</h3>
+        <div class="answers">
+          <label><input type="radio" name="q13" value="a"> Nada, funciona igual</label>
+          <label><input type="radio" name="q13" value="b"> Puede ser más vulnerable a ataques o errores</label>
+          <label><input type="radio" name="q13" value="c"> Se apaga automáticamente</label>
+        </div>
+      </div>
+
+      <div class="question" id="q14-box">
+        <h3>14. ¿Qué debes hacer si notas ruidos extraños o sobrecalentamiento?</h3>
+        <div class="answers">
+          <label><input type="radio" name="q14" value="a"> Ignorarlo</label>
+          <label><input type="radio" name="q14" value="b"> Apagar y revisar o llevar a mantenimiento</label>
+          <label><input type="radio" name="q14" value="c"> Golpearlo suavemente</label>
+        </div>
+      </div>
+
+      <div class="question" id="q15-box">
+        <h3>15. ¿Cuál es una buena práctica para mantener limpio el escritorio del sistema?</h3>
+        <div class="answers">
+          <label><input type="radio" name="q15" value="a"> Llenarlo de accesos directos</label>
+          <label><input type="radio" name="q15" value="b"> Mantener solo los accesos necesarios</label>
+          <label><input type="radio" name="q15" value="c"> No borrar nunca nada</label>
+        </div>
+      </div>
+
+      <div class="question" id="q16-box">
+        <h3>16. ¿Qué debes evitar mientras comes o bebes cerca del PC?</h3>
+        <div class="answers">
+          <label><input type="radio" name="q16" value="a"> Comer o beber directamente sobre el teclado</label>
+          <label><input type="radio" name="q16" value="b"> Tener cuidado y poner vaso alejado</label>
+          <label><input type="radio" name="q16" value="c"> Usar cubiertos de plástico</label>
+        </div>
+      </div>
+
+      <div class="question" id="q17-box">
+        <h3>17. ¿Cada cuánto es recomendable hacer mantenimiento preventivo?</h3>
+        <div class="answers">
+          <label><input type="radio" name="q17" value="a"> Cada semana</label>
+          <label><input type="radio" name="q17" value="b"> Cada 6 meses o según uso</label>
+          <label><input type="radio" name="q17" value="c"> Nunca</label>
+        </div>
+      </div>
+
+      <div class="question" id="q18-box">
+        <h3>18. ¿Qué ayuda a prolongar la vida útil de la batería de una laptop?</h3>
+        <div class="answers">
+          <label><input type="radio" name="q18" value="a"> Dejarla conectada todo el tiempo</label>
+          <label><input type="radio" name="q18" value="b"> Usarla con batería y conectar solo cuando necesario</label>
+          <label><input type="radio" name="q18" value="c"> Descargarla completamente siempre</label>
+        </div>
+      </div>
+
+      <div class="question" id="q19-box">
+        <h3>19. ¿Qué debes hacer antes de abrir una caja o archivo adjunto inesperado?</h3>
+        <div class="answers">
+          <label><input type="radio" name="q19" value="a"> Abrir inmediatamente</label>
+          <label><input type="radio" name="q19" value="b"> Verificar remitente y escanear con antivirus</label>
+          <label><input type="radio" name="q19" value="c"> Reenviarlo a todos</label>
+        </div>
+      </div>
+
+      <div class="question" id="q20-box">
+        <h3>20. ¿Qué dispositivo protege contra picos de tensión y cortes breves de energía?</h3>
+        <div class="answers">
+          <label><input type="radio" name="q20" value="a"> Protector de sobretensiones / UPS</label>
+          <label><input type="radio" name="q20" value="b"> Cargador de teléfono</label>
+          <label><input type="radio" name="q20" value="c"> Cable HDMI</label>
+        </div>
+      </div>
+
+      <div class="question" id="q21-box">
+        <h3>21. ¿Cuál es una buena práctica para contraseñas?</h3>
+        <div class="answers">
+          <label><input type="radio" name="q21" value="a"> Usar la misma contraseña en todos lados</label>
+          <label><input type="radio" name="q21" value="b"> Usar contraseñas fuertes y diferentes, y un gestor</label>
+          <label><input type="radio" name="q21" value="c"> Compartir contraseñas por email</label>
+        </div>
+      </div>
+
+      <div class="question" id="q22-box">
+        <h3>22. ¿Qué estrategia ayuda a recuperar datos ante fallos?</h3>
+        <div class="answers">
+          <label><input type="radio" name="q22" value="a"> No hacer copias y confiar en el disco</label>
+          <label><input type="radio" name="q22" value="b"> Hacer backups en disco externo y nube</label>
+          <label><input type="radio" name="q22" value="c"> Borrar versiones antiguas siempre</label>
+        </div>
+      </div>
+
+      <div class="question" id="q23-box">
+        <h3>23. ¿Qué se recomienda para disipación de calor en desktop?</h3>
+        <div class="answers">
+          <label><input type="radio" name="q23" value="a"> Tapar las salidas de aire</label>
+          <label><input type="radio" name="q23" value="b"> Mantener salidas de aire libres y limpiar polvo</label>
+          <label><input type="radio" name="q23" value="c"> Ponerlo dentro de un armario cerrado</label>
+        </div>
+      </div>
+
+      <div class="question" id="q24-box">
+        <h3>24. ¿Qué tipo de limpiador es seguro para pantalla (LCD/LED)?</h3>
+        <div class="answers">
+          <label><input type="radio" name="q24" value="a"> Limpiador especial para pantallas o paño de microfibra ligeramente humedecido</label>
+          <label><input type="radio" name="q24" value="b"> Limpiador de vidrios con amoníaco</label>
+          <label><input type="radio" name="q24" value="c"> Agua caliente y jabón</label>
+        </div>
+      </div>
+
+      <div class="question" id="q25-box">
+        <h3>25. ¿Qué debes hacer si un programa solicita permisos extraños o te pide datos personales sin motivo?</h3>
+        <div class="answers">
+          <label><input type="radio" name="q25" value="a"> Dar permisos sin leer</label>
+          <label><input type="radio" name="q25" value="b"> Rechazar, investigar y escanear con antivirus</label>
+          <label><input type="radio" name="q25" value="c"> Compartir en redes</label>
+        </div>
+      </div>
 
       <div class="actions">
         <button type="button" id="submit-btn">Enviar respuestas</button>
@@ -100,6 +325,7 @@
   document.querySelectorAll('input[type="radio"]').forEach(radio=>{
     radio.addEventListener('change',(e)=>{
       const name = e.target.name;
+      // Desactivar las opciones de esa pregunta para que no se puedan cambiar
       document.querySelectorAll(`input[name="${name}"]`).forEach(i=> i.disabled = true);
     });
   });
@@ -110,6 +336,7 @@
     let score = 0;
     let wrong = 0;
 
+    // Evitar doble envío
     document.getElementById('submit-btn').disabled = true;
 
     for(let i=1;i<=total;i++){
@@ -119,24 +346,30 @@
         const selLabel = selected.closest('label');
         if(selected.value === correctAnswers[qName]){
           score++;
-          selLabel.classList.add('correct'); // solo esta se marca verde
+          // Solo la opción que elegiste y que es correcta se marca verde
+          selLabel && selLabel.classList.add('correct');
         } else {
           wrong++;
-          selLabel.classList.add('incorrect'); // solo la elegida mal se marca rojo
+          // Solo la opción que elegiste y que es incorrecta se marca rojo
+          selLabel && selLabel.classList.add('incorrect');
         }
       } else {
+        // No seleccionada = fallo (se cuenta como fallo) pero no se marca ninguna etiqueta
         wrong++;
       }
     }
 
+    // Deshabilitar todos los radios tras enviar (por seguridad)
     document.querySelectorAll('input[type="radio"]').forEach(i=> i.disabled = true);
 
+    // Mensaje personalizado según rendimiento
     const pct = score / total;
     let msg = '';
     if(pct === 1) msg = '🎉 Excelente';
     else if(pct >= 0.6) msg = '👍 Bien hecho';
     else msg = '🔔 Necesitas mejorar';
 
+    // Mostrar resultado (aciertos, fallos y mensaje breve)
     const res = document.getElementById('result');
     res.style.display = 'block';
     res.innerHTML = `
@@ -144,6 +377,7 @@
       <div class="small" style="margin-top:6px">✅ Aciertos: ${score} / ${total} &nbsp;&nbsp; ❌ Fallos: ${wrong}</div>
       <div style="margin-top:8px;font-weight:600">${msg}</div>
     `;
+    // desplazar a resultado
     res.scrollIntoView({behavior:'smooth', block:'center'});
   });
 
