--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   .topline{
     text-align:center;
     font-weight:700;
-    color:rgba(230,238,248,0.9);
+    color:rgba(210,238,248,0.9);
     margin-bottom:12px;
     font-size:0.98rem;
     letter-spacing:0.3px;
@@ -125,7 +125,7 @@
       </div>
 
       <div class="question" id="q6-box">
-        <h3>6. ¿Qué recomendaciones hay para el buen uso de Internet?</h3>
+        <h3>6. ¿hola recomendaciones hay para el buen uso de Internet?</h3>
         <div class="answers">
           <label><input type="radio" name="q6" value="a"> No descargar programas desconocidos</label>
           <label><input type="radio" name="q6" value="b"> No aceptar regalos en línea</label>
