--- a/index.html
+++ b/index.html
@@ -198,10 +198,10 @@
   <div class="wrap">
     <!-- Timer above copyright -->
     <div class="timer-row">
-      <div id="timer" aria-live="polite">04:30</div>
+      <div id="timer" aria-live="polite">06:30</div>
     </div>
 
-    <div class="topline">© Mateo — Creador | Profe Martha</div>
+    <div class="topline">© Mateo — Creador</div>
 
     <header>
       <div class="logo">PC</div>
