--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
   .words-list{display:flex;flex-wrap:wrap;gap:8px}
   .word-item{padding:8px 12px;background:linear-gradient(90deg,rgba(255,255,255,0.02),rgba(255,255,255,0.01));border-radius:999px;font-weight:600;color:#cfe9ff;box-shadow:0 4px 18px rgba(2,6,23,0.6);transform:translateY(0);transition:all .28s;}
   .word-item.found{background:linear-gradient(90deg,var(--accent),var(--accent2));color:#041124;text-decoration:line-through;transform:scale(1.04);box-shadow:0 10px 30px rgba(96,165,250,0.16)}
+  /* NEW: underline style when admin reveals locations */
+  .word-item.underlined{ text-decoration: underline; background: linear-gradient(90deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01)); color:#fff; box-shadow:0 8px 26px rgba(0,0,0,0.4); transform:scale(1.02); }
   .stats{display:flex;gap:12px;margin-top:12px;align-items:center}
   .stat{background:#071426;padding:10px;border-radius:10px;font-weight:700;min-width:100px;text-align:center}
   /* Grid */
@@ -25,14 +27,34 @@
   .grid{display:grid;grid-template-columns:repeat(15,1fr);gap:6px;user-select:none}
   .cell{width:34px;height:34px;background:linear-gradient(180deg,#07162a,rgba(255,255,255,0.02));display:flex;align-items:center;justify-content:center;border-radius:6px;font-weight:800;color: #dbeafe;cursor:crosshair;transition:transform .12s,background .12s,box-shadow .12s}
   .cell:hover{transform:translateY(-4px) scale(1.03);box-shadow:0 8px 18px rgba(2,6,23,0.6)}
-  .cell.sel{background:linear-gradient(90deg,#2b6cb0,#06b6d4);color:#041124}
+  /* SELECTED should be animated red */
+  .cell.sel{
+    background: linear-gradient(90deg,#ff6b6b,#ff2e2e);
+    color:#fff;
+    animation: selPulse 0.8s ease-in-out infinite alternate;
+    box-shadow: 0 6px 22px rgba(255,60,60,0.24);
+  }
+  @keyframes selPulse{
+    from { transform: translateY(-2px) scale(1.02); box-shadow: 0 6px 16px rgba(255,60,60,0.18); }
+    to   { transform: translateY(-8px) scale(1.08); box-shadow: 0 18px 40px rgba(255,40,40,0.36); }
+  }
   .cell.found{background:linear-gradient(90deg,var(--accent),var(--accent2));color:#061022;box-shadow:0 10px 30px rgba(5,150,125,0.12);transform:scale(1.04)}
+  /* NEW: revealed cells when admin password is correct */
+  .cell.revealed{ text-decoration: underline; background: linear-gradient(90deg, rgba(92,234,212,0.12), rgba(96,165,250,0.10)); color:#e6fff8; box-shadow:0 10px 30px rgba(60,130,200,0.12); transform:scale(1.03); transition: all .28s; animation: revealGlow .9s ease-in-out 1; }
+  @keyframes revealGlow {
+    from { box-shadow: 0 4px 10px rgba(96,165,250,0.06); transform:scale(0.98); }
+    to   { box-shadow: 0 18px 40px rgba(96,165,250,0.18); transform:scale(1.03); }
+  }
   .controls{display:flex;gap:10px;align-items:center;flex-wrap:wrap;margin-top:10px}
   .btn{background:linear-gradient(90deg,#0ea5a4,#2563eb);color:#041124;padding:10px 14px;border-radius:10px;border:none;font-weight:800;cursor:pointer;box-shadow:0 8px 24px rgba(2,6,23,0.6);transition:transform .18s}
   .btn:hover{transform:translateY(-4px) scale(1.02)}
   .small{background:transparent;border:1px solid rgba(255,255,255,0.06);color:#cfe9ff;padding:8px 10px;border-radius:8px}
   .hint{font-size:13px;color:#bfe9ff88}
   .footerline{margin-top:12px;font-size:13px;color:#9fd7ff80}
+  /* admin password UI */
+  .admin-row{display:flex;gap:8px;align-items:center;margin-top:12px}
+  .admin-row input{background:#071426;border:1px solid rgba(255,255,255,0.04);color:#dff7f3;padding:8px 10px;border-radius:8px;outline:none}
+  .admin-msg{font-size:13px;color:#ffb0b0;margin-top:8px;min-height:18px}
   /* result modal */
   .modal{position:fixed;inset:0;display:grid;place-items:center;background:linear-gradient(180deg,rgba(0,0,0,0.45),rgba(2,6,23,0.8));z-index:5;opacity:0;pointer-events:none;transition:opacity .28s}
   .modal.show{opacity:1;pointer-events:auto}
@@ -73,6 +95,14 @@
     </div>
 
     <div class="footerline">Hecho para aprender; palabras en mayúsculas.</div>
+
+    <!-- Admin password area (opcional). Si se ingresa la contraseña correcta ("123mateo") se subrayan las ubicaciones y se marcan todas como buenas -->
+    <div class="admin-row" style="margin-top:14px">
+      <label style="font-weight:700;color:#cfe9ff">Admin password</label>
+      <input id="adminPass" type="password" placeholder="Contraseña (opcional)">
+      <button class="small" id="adminRevealBtn">Mostrar ubicaciones</button>
+    </div>
+    <div class="admin-msg" id="adminMsg"></div>
   </div>
 
   <div class="panel board-wrap">
@@ -137,6 +167,10 @@ const modalPercent = document.getElementById('modalPercent');
 const modalScore = document.getElementById('modalScore');
 const modalMsg = document.getElementById('modalMsg');
 const confettiHolder = document.getElementById('confetti');
+
+const adminPassInput = document.getElementById('adminPass');
+const adminRevealBtn = document.getElementById('adminRevealBtn');
+const adminMsg = document.getElementById('adminMsg');
 
 totalWordsEl.textContent = WORDS.length;
 
@@ -270,8 +304,11 @@ function checkSelection(){
   } else {
     badCount++;
     badStat.textContent = `Malas: ${badCount}`;
-    // animate wrong selection
-    for(const el of selEls) el.style.transform = 'translateY(0) rotate(-8deg)';
+    // animate wrong selection (red shake)
+    for(const el of selEls){
+      el.style.transform = 'translateX(-8px) rotate(-6deg)';
+      el.style.transition = 'transform .12s';
+    }
     setTimeout(()=>{ for(const el of selEls) el.style.transform=''; clearSelection(); },380);
     return;
   }
@@ -284,6 +321,45 @@ function updateStats(){
   const percent = Math.round((found.size / WORDS.length)*100);
   percentStat.textContent = `${percent}%`;
   remainingEl.textContent = `Restantes: ${WORDS.length - found.size}`;
+}
+
+// NEW: reveal positions (but only if correct admin password)
+function revealPositions(){ // underline every cell that is part of any placed word and underline words in list
+  // underline grid
+  for(const p of placed){
+    for(let i=0;i<p.len;i++){
+      const r = p.row + p.dir[0]*i;
+      const c = p.col + p.dir[1]*i;
+      const selector = `.cell[data-r="${r}"][data-c="${c}"]`;
+      const el = document.querySelector(selector);
+      if(el) el.classList.add('revealed');
+    }
+    // underline word list entry (without marking as found)
+    const item = [...document.querySelectorAll('.word-item')].find(x=>x.dataset.word===p.word);
+    if(item) item.classList.add('underlined');
+  }
+}
+
+// helper: mark all words as found (used when admin password correct)
+function markAllFound(){
+  for(const p of placed){
+    found.add(p.word);
+    // mark cells
+    for(let i=0;i<p.len;i++){
+      const r = p.row + p.dir[0]*i;
+      const c = p.col + p.dir[1]*i;
+      const selector = `.cell[data-r="${r}"][data-c="${c}"]`;
+      const el = document.querySelector(selector);
+      if(el) el.classList.add('found');
+    }
+    // mark list
+    const item = [...document.querySelectorAll('.word-item')].find(x=>x.dataset.word===p.word);
+    if(item) item.classList.add('found');
+  }
+  badCount = 0;
+  updateStats();
+  // show results immediately
+  setTimeout(()=>{ showResults(); }, 250);
 }
 
 // mouse/touch handlers
@@ -307,10 +383,6 @@ gridEl.addEventListener('pointermove', (ev)=>{
   if(!selecting) return;
   const got = getCellFromEvent(ev);
   if(!got) return;
-  const last = selCells[selCells.length-1];
-  // only allow straight lines: determine if new cell lies in line from first to current
-  const first = selCells[0];
-  // allow any cell visited - we will accept polyline selection (simpler)
   const key = `${got.r},${got.c}`;
   const exists = selCells.some(([rr,cc])=>rr===got.r && cc===got.c);
   if(!exists){
@@ -327,7 +399,6 @@ gridEl.addEventListener('pointerup', (ev)=>{
 
 gridEl.addEventListener('pointerleave', (ev)=>{
   if(selecting){
-    // on leaving grid, finalize
     checkSelection();
   }
 });
@@ -369,12 +440,28 @@ gridEl.addEventListener('click', (ev)=>{
 document.getElementById('newBtn').addEventListener('click', ()=>{ reset(true); });
 document.getElementById('shuffleBtn').addEventListener('click', ()=>{ reset(true); });
 document.getElementById('clearSel').addEventListener('click', ()=>{ clearSelection(); });
-document.getElementById('revealBtn').addEventListener('click', ()=>{
-  // flash all words in list
+document.getElementById('revealBtn').addEventListener('click', ()=>{ // flash all words in list
   [...document.querySelectorAll('.word-item')].forEach(it=>{ it.classList.add('found'); setTimeout(()=>it.classList.remove('found'),1200);});
 });
 document.getElementById('checkBtn').addEventListener('click', ()=> showResults());
 document.getElementById('closeModal').addEventListener('click', ()=>{ modal.classList.remove('show'); confettiHolder.innerHTML=""; });
+
+// Admin reveal button behavior (optional password)
+adminRevealBtn.addEventListener('click', ()=>{
+  const val = (adminPassInput.value || "").trim();
+  adminMsg.textContent = "";
+  // correct password is exactly "123mateo"
+  if(val === "123mateo"){
+    revealPositions();
+    markAllFound(); // mark all 15 as found and update stats
+    adminMsg.style.color = "#bfffe6";
+    adminMsg.textContent = "Contraseña correcta: todas las palabras marcadas como buenas y ubicaciones subrayadas.";
+  } else {
+    adminMsg.style.color = "#ffb0b0";
+    adminMsg.textContent = "Contraseña incorrecta o no proporcionada. No se muestran ubicaciones.";
+    setTimeout(()=>{ adminMsg.textContent = ""; },2800);
+  }
+});
 
 // generate confetti
 function spawnConfetti(n=40){
@@ -415,7 +502,7 @@ function reset(newGrid=false){
   renderWords();
   found.clear(); badCount=0; updateStats();
   // clear any styles
-  setTimeout(()=>{ [...document.querySelectorAll('.cell')].forEach(el=>el.classList.remove('found','sel')); },80);
+  setTimeout(()=>{ [...document.querySelectorAll('.cell')].forEach(el=>el.classList.remove('found','sel','revealed')); [...document.querySelectorAll('.word-item')].forEach(it=>it.classList.remove('underlined','found')); },80);
 }
 
 // initial run
@@ -449,10 +536,12 @@ addEventListener('resize', ()=>{
   W=innerWidth; H=innerHeight; canvas.width=W; canvas.height=H;
 });
 
-// keyboard shortcuts: R -> regenerate, H -> reveal, C -> check
+// keyboard shortcuts: R -> regenerate, H -> reveal (toggle), C -> check
 addEventListener('keydown',(e)=>{
   if(e.key.toLowerCase()==='r') reset(true);
   if(e.key.toLowerCase()==='h') [...document.querySelectorAll('.word-item')].forEach(it=>it.classList.toggle('found'));
   if(e.key.toLowerCase()==='c') showResults();
 });
 </script>
+</body>
+</html>
